<resources>
    <string name="app_name">3dlinkPrueba</string>

    <!-- Content Descriptions -->
    <string name="content_description_character_detail_image">Character poster item</string>
    <string name="content_description_character_image">Character poster item</string>
    <string name="content_description_character_image_favorite_icon">Character poster favorite icon</string>

    <!-- Sections -->
    <string name="section_gender">Gender</string>
    <string name="section_list_of_episodes">List of episodes</string>
    <string name="section_location">Location</string>
    <string name="section_origin">Origin</string>
    <string name="section_species">Species</string>
    <string name="section_status">Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="email">Email</string>
    <string name="password">password</string>

</resources>