<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_general">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Character Detail Section -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/characterImage"
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:contentDescription="@string/content_description_character_detail_image"
                            android:layout_marginTop="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/ic_camera_alt_black" />

                        <TextView
                            android:id="@+id/characterName"
                            style="@style/CharacterDetailSectionName"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/characterImage"
                            tools:text="Rick Sanchez" />

                        <TextView
                            android:id="@+id/characterStatusLabel"
                            style="@style/CharacterDetailHeaderSectionTitle"
                            android:text="@string/section_status"
                            app:layout_constraintEnd_toStartOf="@id/characterSpeciesLabel"
                            app:layout_constraintHorizontal_chainStyle="spread"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/characterName" />

                        <TextView
                            android:id="@+id/characterSpeciesLabel"
                            style="@style/CharacterDetailHeaderSectionTitle"
                            android:layout_height="wrap_content"
                            android:text="@string/section_species"
                            app:layout_constraintEnd_toStartOf="@id/characterGenderLabel"
                            app:layout_constraintStart_toEndOf="@id/characterStatusLabel"
                            app:layout_constraintTop_toBottomOf="@id/characterName" />

                        <TextView
                            android:id="@+id/characterGenderLabel"
                            style="@style/CharacterDetailHeaderSectionTitle"
                            android:text="@string/section_gender"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/characterSpeciesLabel"
                            app:layout_constraintTop_toBottomOf="@id/characterName" />

                        <TextView
                            android:text="@string/section_status"
                            style="@style/CharacterDetailHeaderSectionBody"
                           android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="@id/characterStatusLabel"
                            app:layout_constraintStart_toStartOf="@id/characterStatusLabel"
                            app:layout_constraintTop_toBottomOf="@id/characterStatusLabel"
                            tools:text="Alive" />

                        <TextView
                            style="@style/CharacterDetailHeaderSectionBody"
                            app:layout_constraintEnd_toEndOf="@id/characterSpeciesLabel"
                            app:layout_constraintStart_toStartOf="@id/characterSpeciesLabel"
                            app:layout_constraintTop_toBottomOf="@id/characterSpeciesLabel"
                            tools:text="Human" />

                        <TextView
                            style="@style/CharacterDetailHeaderSectionBody"
                            app:layout_constraintEnd_toEndOf="@id/characterGenderLabel"
                            app:layout_constraintStart_toStartOf="@id/characterGenderLabel"
                            app:layout_constraintTop_toBottomOf="@id/characterGenderLabel"
                            tools:text="Male" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Location & Origin Sections -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    style="@style/CharacterDetailLocationSectionCard"
                    android:id="@+id/parentOrigin"
                    android:layout_height="@dimen/character_detail_location_height"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/parentLocation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CharacterDetailSectionTitle"
                            android:text="@string/section_origin" />

                        <TextView
                            android:id="@+id/character_origin"
                            style="@style/CharacterDetailLocationSectionBody"

                            tools:text="Earth" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CharacterDetailLocationSectionCard"
                    android:id="@+id/parentLocation"
                    android:layout_height="@dimen/character_detail_location_height"
                    android:layout_width="0dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/parentOrigin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CharacterDetailSectionTitle"
                            android:text="@string/section_location" />

                        <TextView
                            style="@style/CharacterDetailLocationSectionBody"
                            android:id="@+id/character_location"
                            tools:text="Earth" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Episode List Section -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CharacterDetailSectionTitle"
                        android:text="@string/section_list_of_episodes" />

                    <ProgressBar
                        android:id="@+id/episodeProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvEpisodeList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                     />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

